2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* src/durango.c:
	* src/nsc.h:
	* src/nsc_driver.c:
	* src/nsc_galstub.c:
	* src/nsc_gx1_accel.c:
	* src/nsc_gx1_cursor.c:
	* src/nsc_gx1_dga.c:
	* src/nsc_gx1_driver.c:
	* src/nsc_gx1_shadow.c:
	* src/nsc_gx1_video.c:
	* src/nsc_gx2_accel.c:
	* src/nsc_gx2_cursor.c:
	* src/nsc_gx2_dga.c:
	* src/nsc_gx2_driver.c:
	* src/nsc_gx2_shadow.c:
	* src/nsc_gx2_video.c:
	Unlibcwrap.  Bump server version requirement.  Bump to 2.8.0.

2006-02-27  Alan Coopersmith  <alan.coopersmith@sun.com>

	* man/nsc.man: 
	Typo fix (Nicholas Joly, XFree86 bugzilla #1658)

2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* man/Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Remove extraneous AC_MSG_RESULT.

2005-11-29  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Only build dlloader modules by default.

2005-11-15  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Add check for DGA extension to fix issues when building with
	separate build roots.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update pkgcheck dependencies to work with separate build roots.